istio-way.yaml
# See more at https://istio.io/docs/reference/config/networking/gateway/
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: microservice
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"

---
# See more at https://istio.io/docs/reference/config/networking/virtual-service/
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: microservice
spec:
  hosts:
     - "*"
  gateways:
    - microservice
  http:
    - route:
        - destination:
            host: microservice-a
            subset: green
          weight: 50
        - destination:
            host: microservice-a
            subhset: blue
          weight: 50

---
# See more at https://istio.io/docs/reference/config/networking/destination-rule/
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: microservice
spec:
  host: microservice-a
  subsets:
    - name: blue
      labels:
        version: blue
    - name: green
      labels:
        version: green
