test2.yaml
# See more at https://istio.io/docs/reference/config/networking/gateway/
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: test2
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - 'test2.apps.cluster-b76e.b76e.example.opentlc.com'

---
# See more at https://istio.io/docs/reference/config/networking/virtual-service/
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: test2
spec:
  hosts:
  - 'test2.apps.cluster-b76e.b76e.example.opentlc.com'
  gateways: 
  - test2 
  http:
  - route:
    - destination:
        host: microservice-a
        subset: green
      weight: 50
    - destination:
        host: microservice-a
        subset: blue
      weight: 50

---
# See more at https://istio.io/docs/reference/config/networking/destination-rule/
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: test2
spec:
  host: microservice-a
  subsets:
  - name: blue
    labels:
      version: blue
  - name: green 
    labels:
      version: green
